--- a/source/.eslintrc.json
+++ b/source/.eslintrc.json
@@ -22,6 +22,7 @@
         "react-hooks"
     ],
     "rules": {
+        "react/react-in-jsx-scope": "off",
         "indent": [
             "error",
             4,
