--- a/package.json
+++ b/package.json
@@ -1,63 +1,75 @@
 {
-	"name": "social-media-web",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"start": "craco start",
-		"build": "craco build",
-		"test": "craco test",
-		"eject": "react-scripts eject",
-		"lint": "eslint \"src/**/*.js\" --fix",
-		"format": "prettier --write \"src/**/*.js\"",
-		"i18n": "extract-react-intl-messages -l=en -d en -o src/app/locales --flat 'src/**/*.js'",
-		"prepare": "husky install"
-	},
-	"dependencies": {
-		"@commitlint/cli": "^17.0.0",
-		"@commitlint/config-conventional": "^17.3.0",
-		"@craco/craco": "^7.0.0",
-		"@jackwilsdon/craco-use-babelrc": "^1.0.0",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"axios": "^1.2.1",
-		"babel-plugin-react-intl-auto": "^3.3.0",
-		"classnames": "^2.3.2",
-		"dayjs": "^1.11.7",
-		"eslint-plugin-prettier": "^4.2.1",
-		"extract-react-intl-messages": "^4.1.1",
-		"husky": "^8.0.3",
-		"immer": "^9.0.16",
-		"lint-staged": "^13.1.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-intl": "^6.0.3",
-		"react-router-dom": "^6.5.0",
-		"react-scripts": "5.0.1",
-		"sass": "^1.57.1"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"lint-staged": {
-		"*.js": [
-			"npm run lint",
-			"git add ."
-		]
-	}
+    "name": "social-media-web",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
+        "eject": "react-scripts eject",
+        "lint": "eslint \"src/**/*.js\" --fix",
+        "format": "prettier --write \"src/**/*.js\"",
+        "i18n": "extract-react-intl-messages -l=en -d en -o src/app/locales --flat 'src/**/*.js'",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "@commitlint/cli": "^17.0.0",
+        "@commitlint/config-conventional": "^17.3.0",
+        "@craco/craco": "^7.0.0",
+        "@jackwilsdon/craco-use-babelrc": "^1.0.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.2.1",
+        "babel-plugin-react-intl-auto": "^3.3.0",
+        "classnames": "^2.3.2",
+        "dayjs": "^1.11.7",
+        "eslint-plugin-prettier": "^4.2.1",
+        "extract-react-intl-messages": "^4.1.1",
+        "husky": "^8.0.3",
+        "immer": "^9.0.16",
+        "lint-staged": "^13.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-intl": "^6.0.3",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.5.0",
+        "react-scripts": "5.0.1",
+        "sass": "^1.57.1"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "lint-staged": {
+        "*.js": [
+            "npm run lint",
+            "git add ."
+        ]
+    },
+    "jest": {
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ]
+    },
+    "devDependencies": {
+        "@cfaester/enzyme-adapter-react-18": "^0.6.0",
+        "enzyme": "^3.11.0",
+        "enzyme-to-json": "^3.6.2",
+        "redux-mock-store": "^1.5.4"
+    }
 }
