--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,6 @@ yarn-debug.log*
 yarn-error.log*
 coverage
 __snapshots__
-*/__snapshots__
-*/**/__snapshots__
-*/**/***/__snapshots__
+*/__snapshots__/
+*/*/__snapshots__/
+*/*/*/__snapshots__/
