--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: npm start
+    env_file:
+      - ./.env
     ports:
       - '3000:3000'
