--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,11 +85,11 @@ workflows:
           #   branches:
           #     only:
           #       - main
-      # - aws-ecr/build-and-push-image: 
-      #     requires:
-      #       - test-frontend
-      #     dockerfile: Dockerfile
-      #     path: .
-      #     profile-name: waflol
-      #     repo: social-web-api
-      #     tag: latest
+      - aws-ecr/build-and-push-image: 
+          requires:
+            - test-frontend
+          dockerfile: Dockerfile
+          path: .
+          profile-name: waflol
+          repo: social-web-api
+          tag: latest
