--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,10 +81,10 @@ workflows:
       - build-and-push-frontend:
           requires:
             - test-frontend
-          # filters:
-          #   branches:
-          #     only:
-          #       - main
+          filters:
+            branches:
+              only:
+                - main
       - aws-ecr/build-and-push-image: 
           requires:
             - test-frontend
@@ -93,3 +93,7 @@ workflows:
           profile-name: waflol
           repo: social-media-fe
           tag: latest
+          filters:
+            branches:
+              only:
+                - main
