--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
   aws-ecr: circleci/aws-ecr@8.1.2 # use the AWS ECR orb
   aws-ecs: circleci/aws-ecs@3.2.0 # use the AWS ECS orb
   aws-cli: circleci/aws-cli@3.1.1 # use the AWS CLI orb
-
+  jira: circleci/jira@1.3.1
 executors:
   frontend-executor:
     docker:
@@ -76,8 +76,13 @@ workflows:
   # Name of workflow
   pipeline:
     # List of jobs that will run
-    jobs:
-      - test-frontend
+    frontend-pipeline:
+      - test-frontend:
+          post-steps:
+            - jira/notify:
+                environment_type: testing
+                job_type: build
+
       - build-and-push-frontend:
           requires:
             - test-frontend
@@ -85,6 +90,11 @@ workflows:
             branches:
               only:
                 - main
+          post-steps:
+            - jira/notify:
+                environment_type: development
+                job_type: build
+
       - aws-ecr/build-and-push-image: 
           requires:
             - test-frontend
@@ -97,3 +107,7 @@ workflows:
             branches:
               only:
                 - main
+          post-steps:
+            - jira/notify:
+                environment_type: development
+                job_type: build
