--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@commitlint/config-conventional": "^17.3.0",
         "@craco/craco": "^7.0.0",
         "@jackwilsdon/craco-use-babelrc": "^1.0.0",
+        "@sentry/react": "^7.37.1",
+        "@sentry/tracing": "^7.37.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
