SC-4 add register UI & Matine

--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.3.0",
         "@craco/craco": "^7.0.0",
+        "@emotion/react": "^11.10.5",
         "@jackwilsdon/craco-use-babelrc": "^1.0.0",
+        "@mantine/core": "^5.10.4",
+        "@mantine/dates": "^5.10.4",
+        "@mantine/hooks": "^5.10.4",
         "@sentry/react": "^7.37.1",
         "@sentry/tracing": "^7.37.1",
         "@tabler/icons-react": "^2.4.0",
@@ -28,6 +32,7 @@
         "babel-plugin-react-intl-auto": "^3.3.0",
         "bootstrap": "^5.2.3",
         "classnames": "^2.3.2",
+        "dayjs": "^1.11.7",
         "eslint-plugin-prettier": "^4.2.1",
         "extract-react-intl-messages": "^4.1.1",
         "google-map-react": "^2.2.0",
@@ -41,13 +46,11 @@
         "react-apexcharts": "^1.4.0",
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
-        "react-flatpickr": "^3.10.13",
         "react-intl": "^6.0.3",
         "react-player": "^2.11.2",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.5.0",
         "react-scripts": "5.0.1",
-        "react-select": "^5.7.0",
         "react-slick": "^0.29.0",
         "sass": "^1.57.1",
         "slick-carousel": "^1.8.1"
@@ -75,7 +78,7 @@
             "npm run lint",
             "git add ."
         ]
-      },
+    },
     "jest": {
         "snapshotSerializers": [
             "enzyme-to-json/serializer"
