--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@jackwilsdon/craco-use-babelrc": "^1.0.0",
         "@mantine/core": "^5.10.4",
         "@mantine/dates": "^5.10.4",
+        "@mantine/form": "^5.10.4",
         "@mantine/hooks": "^5.10.4",
         "@sentry/react": "^7.37.1",
         "@sentry/tracing": "^7.37.1",
