--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,11 @@ services:
       context: .
       dockerfile: Dockerfile
     command: npm start
-    env_file:
-      - ./.env
+    # env_file:
+    #   - ./.env
+    environment:
+    - REACT_APP_HOST_API=http://localhost:8000/
+    - REACT_APP_SENTRY_HOST=https://cc963eba32a14664a03504f59b1aa454@o4504649765158912.ingest.sentry.io/4504668852060160
+    - REACT_APP_PUBLIC_URL=http://localhost:3000/
     ports:
       - '3000:3000'
