--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@mantine/dates": "^5.10.4",
         "@mantine/form": "^5.10.4",
         "@mantine/hooks": "^5.10.4",
+        "@mantine/notifications": "^5.10.4",
+        "@reduxjs/toolkit": "^1.9.2",
         "@sentry/react": "^7.37.1",
         "@sentry/tracing": "^7.37.1",
         "@tabler/icons-react": "^2.4.0",
