--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: 'sudo npm install -g npm@latest'
       - run:
           name: npm-install
-          command: npm ci
+          command: npm install
       - run:
           name: Run tests
           command: npm run test -- --coverage --watchAll=false
