--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@sentry/react": "^7.37.1",
         "@sentry/tracing": "^7.37.1",
         "@tabler/icons-react": "^2.4.0",
+        "@tanstack/react-query": "^4.24.9",
+        "@tanstack/react-query-devtools": "^4.24.9",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -42,6 +44,7 @@
         "husky": "^8.0.3",
         "immer": "^9.0.16",
         "lint-staged": "^13.1.0",
+        "mem": "^9.0.2",
         "node-sass": "^7.0.3",
         "react": "^18.2.0",
         "react-18-image-lightbox": "^5.1.4",
