--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react-router-dom": "^6.5.0",
         "react-scripts": "5.0.1",
         "react-slick": "^0.29.0",
+        "react-use-websocket": "^4.3.1",
         "sass": "^1.57.1",
         "slick-carousel": "^1.8.1"
     },
