--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
         "@craco/craco": "^7.0.0",
         "@emotion/react": "^11.10.5",
         "@jackwilsdon/craco-use-babelrc": "^1.0.0",
-        "@mantine/core": "^5.10.4",
-        "@mantine/dates": "^5.10.4",
-        "@mantine/form": "^5.10.4",
-        "@mantine/hooks": "^5.10.4",
-        "@mantine/notifications": "^5.10.4",
+        "@mantine/core": "^5.10.5",
+        "@mantine/dates": "^5.10.5",
+        "@mantine/dropzone": "^5.10.5",
+        "@mantine/form": "^5.10.5",
+        "@mantine/hooks": "^5.10.5",
+        "@mantine/notifications": "^5.10.5",
         "@reduxjs/toolkit": "^1.9.2",
         "@sentry/react": "^7.37.1",
         "@sentry/tracing": "^7.37.1",
