--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.3.0",
         "@craco/craco": "^7.0.0",
+        "@emoji-mart/data": "^1.1.2",
+        "@emoji-mart/react": "^1.1.1",
         "@emotion/react": "^11.10.5",
         "@jackwilsdon/craco-use-babelrc": "^1.0.0",
         "@mantine/core": "^5.10.5",
@@ -40,6 +42,7 @@
         "bootstrap": "^5.2.3",
         "classnames": "^2.3.2",
         "dayjs": "^1.11.7",
+        "emoji-mart": "^5.5.2",
         "eslint-plugin-prettier": "^4.2.1",
         "extract-react-intl-messages": "^4.1.1",
         "google-map-react": "^2.2.0",
