--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
         "react-dom": "^18.2.0",
         "react-input-mask": "^2.0.4",
         "react-intl": "^6.0.3",
-        "react-player": "^2.11.2",
+        "react-player": "^2.12.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.5.0",
         "react-scripts": "5.0.1",
@@ -101,6 +101,7 @@
         "@cfaester/enzyme-adapter-react-18": "^0.6.0",
         "enzyme": "^3.11.0",
         "enzyme-to-json": "^3.6.2",
-        "redux-mock-store": "^1.5.4"
+        "redux-mock-store": "^1.5.4",
+        "typescript": "^4.9.5"
     }
 }
