--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
         "@craco/craco": "^7.0.0",
         "@emoji-mart/data": "^1.1.2",
         "@emoji-mart/react": "^1.1.1",
-        "@emotion/react": "^11.10.5",
+        "@emotion/react": "^11.10.6",
         "@jackwilsdon/craco-use-babelrc": "^1.0.0",
-        "@mantine/core": "^5.10.5",
-        "@mantine/dates": "^5.10.5",
-        "@mantine/dropzone": "^5.10.5",
-        "@mantine/form": "^5.10.5",
-        "@mantine/hooks": "^5.10.5",
-        "@mantine/notifications": "^5.10.5",
+        "@mantine/core": "^6.0.6",
+        "@mantine/dates": "^6.0.6",
+        "@mantine/dropzone": "^6.0.6",
+        "@mantine/form": "^6.0.6",
+        "@mantine/hooks": "^6.0.6",
+        "@mantine/modals": "^6.0.6",
+        "@mantine/notifications": "^6.0.6",
         "@reduxjs/toolkit": "^1.9.2",
         "@sentry/react": "^7.37.1",
         "@sentry/tracing": "^7.37.1",
@@ -56,6 +57,7 @@
         "react-apexcharts": "^1.4.0",
         "react-bootstrap": "^2.7.2",
         "react-dom": "^18.2.0",
+        "react-easy-crop": "^4.7.4",
         "react-input-mask": "^2.0.4",
         "react-intl": "^6.0.3",
         "react-player": "^2.12.0",
