--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "bootstrap": "^5.2.3",
         "classnames": "^2.3.2",
         "dayjs": "^1.11.7",
+        "emoji-mart": "^5.5.2",
         "eslint-plugin-prettier": "^4.2.1",
         "extract-react-intl-messages": "^4.1.1",
         "google-map-react": "^2.2.0",
