--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "build-css": "node-sass -w public/assets/scss -o public/assets/css"
     },
     "dependencies": {
+        "@babel/core": "^7.21.8",
+        "@babel/preset-env": "^7.21.5",
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.3.0",
         "@craco/craco": "^7.0.0",
