--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,9 +3,21 @@ services:
   nginx-react:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
+    container_name: nginx-react
     ports:
       - 80:80
+      - 443:443
     env_file:
-      - ./.env.prod
+      - .env
+    volumes:
+      - ./certbot/www:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:rov
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
     
