--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,7 +13,7 @@ COPY . .
 # copy project
 FROM nginx:stable-alpine
 RUN rm /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/nginx/nginx-staging.conf /etc/nginx/conf.d/default.conf
 
 WORKDIR /usr/share/nginx/html
 # Remove default nginx static assets
