--- a/nginx/nginx-staging.conf
+++ b/nginx/nginx-staging.conf
@@ -6,8 +6,16 @@ server {
     location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        return 301 https://$host$request_uri;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Optional: Redirect all HTTP requests to HTTPS
+    if ($scheme != "https") {
+        return 301 https://$server_name$request_uri;
     }
 
     
@@ -23,10 +31,10 @@ server {
     ssl_certificate_key /etc/nginx/ssl/live/domainclark.me/privkey.pem;
 
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-
+    root /usr/share/nginx/html;
+    index index.html index.htm;
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
+        
         include /etc/nginx/mime.types;
         try_files $uri $uri/ /index.html =404;
     }
