--- a/nginx/nginx-staging.conf
+++ b/nginx/nginx-staging.conf
@@ -23,12 +23,11 @@ server {
     ssl_certificate_key /etc/nginx/ssl/live/domainclark.me/privkey.pem;
 
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384';
 
     location / {
-        autoindex on;
         root /usr/share/nginx/html;
-        index index.html index.htm;
-        include /etc/nginx/mime.types;
-        try_files $uri $uri/ /index.html =404;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
