--- a/nginx/nginx-staging.conf
+++ b/nginx/nginx-staging.conf
@@ -4,10 +4,13 @@ server {
 
     server_name domainclark.me;
     location ~ /.well-known/acme-challenge/ {
+        allow all;
         root /var/www/certbot;
     }
     location / {
-        return 301 https://$host$request_uri;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     
