--- a/nginx/nginx-staging.conf
+++ b/nginx/nginx-staging.conf
@@ -4,16 +4,11 @@ server {
 
     server_name domainclark.me;
     location ~ /.well-known/acme-challenge/ {
-        allow all;
         root /var/www/certbot;
     }
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+        return 301 https://$host$request_uri;
     }
-
-    
 }
 
 server {
@@ -22,15 +17,47 @@ server {
 
     server_name domainclark.me;
 
+    root /usr/share/nginx/html;
+    index index.html;
+
     ssl_certificate /etc/nginx/ssl/live/domainclark.me/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/domainclark.me/privkey.pem;
 
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384';
+
+    # Additional Nginx options
+    # This file contains important security parameters. If you modify this file
+    # manually, Certbot will be unable to automatically provide future security
+    # updates. Instead, Certbot will print and log an error message with a path to
+    # the up-to-date file that you will need to refer to when manually updating
+    # this file. Contents are based on https://ssl-config.mozilla.org
+
+    ssl_session_cache shared:le_nginx_SSL:10m;
+    ssl_session_timeout 1440m;
+    ssl_session_tickets off;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+    # dot files
+    location ~ /\.(?!well-known) { deny all; }
+
+    # SEO files
+    # location = /robots.txt { log_not_found off; }
+    # location = /sitemap.xml { log_not_found off; }
+    # location = /favicon.ico { log_not_found off; }
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
         try_files $uri $uri/ /index.html;
     }
 }
