--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,8 +7,9 @@ COPY ./package.json /app/package.json
 COPY package-lock.json /app/package-lock.json
 
 # install dependencies
-RUN npm install
+RUN npm ci
 COPY . .
+RUN npm run build
 
 # copy project
 FROM nginx:stable-alpine
