--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - ./certbot/www:/var/www/certbot/:ro
       - ./certbot/conf/:/etc/nginx/ssl/:rov
-      - ./build/:/usr/share/nginx/html/:ro
+      - ./build/:/usr/share/nginx/html/
 
   certbot:
     image: certbot/certbot:latest
