--- a/nginx/nginx-staging.conf
+++ b/nginx/nginx-staging.conf
@@ -3,11 +3,14 @@ server {
     listen [::]:80;
 
     server_name domainclark.me;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header Connection "";
     location ~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://$server_name$request_uri;
     }
 }
 
