--- a/nginx/nginx-staging.conf
+++ b/nginx/nginx-staging.conf
@@ -23,10 +23,25 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    gzip on;
+    gzip_types      text/plain application/xml;
+    gzip_proxied    no-cache no-store private expired auth;
+    gzip_min_length 1000;
+    gunzip on;
+
+    ssl_buffer_size 4k;
     ssl_certificate /etc/nginx/ssl/live/domainclark.me/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/domainclark.me/privkey.pem;
+    ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_ecdh_curve secp521r1:secp384r1;
+    ssl_protocols TLSv1.3 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_stapling on;
+    ssl_stapling_verify on;
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+    # chrome won't honor the CSP header if there are linebreaks, so have to put it all on a single line
+    set $csp "default-src 'none'; base-uri 'none'; img-src 'self'; form-action 'none'; frame-ancestors 'self'; frame-src 'self'; object-src 'none'; require-trusted-types-for 'script'; script-src 'nonce-$request_id' 'strict-dynamic' 'unsafe-inline' https:; style-src 'self';";
 
     # Additional Nginx options
     # This file contains important security parameters. If you modify this file
@@ -39,23 +54,16 @@ server {
     ssl_session_timeout 1440m;
     ssl_session_tickets off;
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-
-    # dot files
-    location ~ /\.(?!well-known) { deny all; }
-
-    # SEO files
-    # location = /robots.txt { log_not_found off; }
-    # location = /sitemap.xml { log_not_found off; }
-    # location = /favicon.ico { log_not_found off; }
-    include /etc/nginx/mime.types;
     location / {
+        add_header Cache-Control "max-age=31536000, no-cache";
+        add_header Content-Security-Policy "${csp}";
+        add_header Permissions-Policy "fullscreen=(self)";
+        add_header Referrer-Policy "strict-origin" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1";
+
         try_files $uri $uri/ /index.html;
     }
 }
