--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "craco start",
         "build": "craco build",
+        "postbuild": "node scripts/nonce.js",
         "test": "craco test",
         "eject": "react-scripts eject",
         "lint": "eslint \"src/**/*.js\" --fix",
