--- a/nginx/nginx-staging.conf
+++ b/nginx/nginx-staging.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name domainclark.me;
+    server_name demokltn.me;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header Connection "";
@@ -18,7 +18,7 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name domainclark.me;
+    server_name demokltn.me;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -30,8 +30,8 @@ server {
     gunzip on;
 
     ssl_buffer_size 4k;
-    ssl_certificate /etc/nginx/ssl/live/domainclark.me/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/domainclark.me/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/demokltn.me/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/demokltn.me/privkey.pem;
     
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
