--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,17 @@ jobs:
             - "59:49:79:51:6d:cc:b8:d1:17:b6:2f:af:cd:ea:12:15"
       - run: ssh $DROPLET_USER@$DROPLET_IP "./deploy.sh"
 
+  deploy-prod-2:
+    machine:
+      image: ubuntu-2204:2023.07.2
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "59:49:79:51:6d:cc:b8:d1:17:b6:2f:af:cd:ea:12:15"
+      - run: ssh $DROPLET_USER_2@$DROPLET_IP_2 "./deploy.sh"
+  
+
 workflows:
   # Name of workflow
   frontend-pipeline:
@@ -49,3 +60,10 @@ workflows:
             branches:
               only:
                 - main
+      - deploy-prod-2:
+          requires:
+            - test-frontend
+          filters:
+            branches:
+              only:
+                - deploy/kltndemo
