--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@tabler/icons-react": "^2.4.0",
         "@tanstack/react-query": "^4.24.9",
         "@tanstack/react-query-devtools": "^4.24.9",
+        "@tanstack/react-virtual": "^3.0.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -52,6 +53,7 @@
         "husky": "^8.0.3",
         "immer": "^9.0.16",
         "lint-staged": "^13.1.0",
+        "lodash": "^4.17.21",
         "mem": "^9.0.2",
         "node-sass": "^7.0.3",
         "react": "^18.2.0",
