--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - .env
     volumes:
-      - static:/app/build
+      - ./build:/app/build
     
   nginx-react:
     build:
@@ -25,7 +25,7 @@ services:
     volumes:
       - ./certbot/www:/var/www/certbot/:ro
       - ./certbot/conf/:/etc/nginx/ssl/:rov
-      - static:/usr/share/nginx/html/
+      - ./build:/usr/share/nginx/html/
 
   certbot:
     image: certbot/certbot:latest
